--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.2/css/boxicons.min.css'
     integrity='sha512-AGmpdsTqvAh2GvTWzVhhJ9VqQb1eAXwOM7uiWtv0DzcnGaGWy98K51z2cK5OG3gp4NB1HbMaD7p0MeO9kE7E3w=='
     crossorigin='anonymous' />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 </head>
 
 <body>
-  <div class="header">
+  <nav class="nav">
     <a class="logo border-1">
       <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31"
         alt="Microsoft">
@@ -41,8 +42,8 @@
     <div class="user border-1">
       <span>User</span><img src="https://i.pinimg.com/564x/4c/64/22/4c642224643e65500745ff827c670b29.jpg" alt="">
     </div>
-  </div>
-  <div class="content">
+  </nav>
+  <main class="content">
     <div class="banner">
       <img
         src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4q2qk?ver=e900&q=90&m=6&h=1192&w=2120&b=%23FFFFFFFF&l=f&f=jpg&o=t&aim=true"
@@ -184,79 +185,79 @@
       <img src="./images/Facebook.png" alt="" target="_blank" title="在 Facebook 上關注 Microsoft，在新索引標籤中開啟">
       <img src="./images/Youtube.png" alt="" target="_blank" title="在 Youtube 上關注 Microsoft，在新索引標籤中開啟">
     </div>
-  </div>
-  <div class="footer">
+  </main>
+  <footer class="footer">
     <div class="bottom-nav">
       <ul class="bottom-nav-list">
         <li class="bottom-nav-item">最新動向</li>
-        <li class="bottom-nav-item">Microsoft 365</li>
-        <li class="bottom-nav-item">Surface Go</li>
-        <li class="bottom-nav-item">Surface Book 2</li>
-        <li class="bottom-nav-item">Surface Pro</li>
-        <li class="bottom-nav-item">Windows 11 應用程式</li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
+        <li class="bottom-nav-item"><a href="#">Surface Go</a></li>
+        <li class="bottom-nav-item"><a href="#">Surface Book 2</a></li>
+        <li class="bottom-nav-item"><a href="#">Surface Pro</a></li>
+        <li class="bottom-nav-item"><a href="#">Windows 11 應用程式</a></li>
       </ul>
       <ul class="bottom-nav-list">
         <li class="bottom-nav-item">Microsoft Store</li>
-        <li class="bottom-nav-item">帳戶設定檔</li>
-        <li class="bottom-nav-item">下載中心</li>
-        <li class="bottom-nav-item">Microsoft Store 支援</li>
-        <li class="bottom-nav-item">退貨/退款</li>
-        <li class="bottom-nav-item">訂單追蹤</li>
+        <li class="bottom-nav-item"><a href="#">帳戶設定檔</a></li>
+        <li class="bottom-nav-item"><a href="#">下載中心</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft Store 支援</a></li>
+        <li class="bottom-nav-item"><a href="#">退貨/退款</a></li>
+        <li class="bottom-nav-item"><a href="#">訂單追蹤</a></li>
       </ul>
       <ul class="bottom-nav-list">
         <li class="bottom-nav-item">教育</li>
-        <li class="bottom-nav-item">Microsoft 教育</li>
-        <li class="bottom-nav-item">教育裝置</li>
-        <li class="bottom-nav-item">Microsoft Teams 教育版</li>
-        <li class="bottom-nav-item">Microsoft 365 教育版</li>
-        <li class="bottom-nav-item">Office 教育版</li>
-        <li class="bottom-nav-item">教育工作者訓練和發展</li>
-        <li class="bottom-nav-item">學生和家長優惠</li>
-        <li class="bottom-nav-item">Azure 學生版</li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 教育</a></li>
+        <li class="bottom-nav-item"><a href="#">教育裝置</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft Teams 教育版</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 365 教育版</a></li>
+        <li class="bottom-nav-item"><a href="#">Office 教育版</a></li>
+        <li class="bottom-nav-item"><a href="#">教育工作者訓練和發展</a></li>
+        <li class="bottom-nav-item"><a href="#">學生和家長優惠</a></li>
+        <li class="bottom-nav-item"><a href="#">Azure 學生版</a></li>
       </ul>
       <ul class="bottom-nav-list">
         <li class="bottom-nav-item">商務</li>
-        <li class="bottom-nav-item">Microsoft Cloud</li>
-        <li class="bottom-nav-item">Microsoft 安全性</li>
-        <li class="bottom-nav-item">Azure</li>
-        <li class="bottom-nav-item">Dynamics 365</li>
-        <li class="bottom-nav-item">Microsoft 365</li>
-        <li class="bottom-nav-item">Microsoft Advertising</li>
-        <li class="bottom-nav-item">Microsoft 產業</li>
-        <li class="bottom-nav-item">Microsoft Teams</li>
+        <li class="bottom-nav-item"><a href="#">Microsoft Cloud</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 安全性</a></li>
+        <li class="bottom-nav-item"><a href="#">Azure</a></li>
+        <li class="bottom-nav-item"><a href="#">Dynamics 365</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft Advertising</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 產業</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft Teams</a></li>
       </ul>
       <ul class="bottom-nav-list">
         <li class="bottom-nav-item">開發人員與 IT</li>
-        <li class="bottom-nav-item">開發人員中心</li>
-        <li class="bottom-nav-item">文件</li>
-        <li class="bottom-nav-item">Microsoft Learn</li>
-        <li class="bottom-nav-item">Microsoft 技術社群</li>
-        <li class="bottom-nav-item">Azure Marketplace</li>
-        <li class="bottom-nav-item">AppSource</li>
-        <li class="bottom-nav-item"> Microsoft Power Platform</li>
-        <li class="bottom-nav-item">Visual Studio</li>
+        <li class="bottom-nav-item"><a href="#">開發人員中心</a></li>
+        <li class="bottom-nav-item"><a href="#">文件</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft Learn</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 技術社群</a></li>
+        <li class="bottom-nav-item"><a href="#">Azure Marketplace</a></li>
+        <li class="bottom-nav-item"><a href="#">AppSource</a></li>
+        <li class="bottom-nav-item"> <a href="#">Microsoft Power Platform</a></li>
+        <li class="bottom-nav-item"><a href="#">Visual Studio</a></li>
       </ul>
       <ul class="bottom-nav-list">
         <li class="bottom-nav-item">公司</li>
-        <li class="bottom-nav-item">人才招募</li>
-        <li class="bottom-nav-item">公司新聞</li>
-        <li class="bottom-nav-item">Microsoft 隱私權</li>
-        <li class="bottom-nav-item">投資者</li>
-        <li class="bottom-nav-item">永續性</li>
+        <li class="bottom-nav-item"><a href="#">人才招募</a></li>
+        <li class="bottom-nav-item"><a href="#">公司新聞</a></li>
+        <li class="bottom-nav-item"><a href="#">Microsoft 隱私權</a></li>
+        <li class="bottom-nav-item"><a href="#">投資者</a></li>
+        <li class="bottom-nav-item"><a href="#">永續性</a></li>
       </ul>
-      <div class="contact">
-        <div class="language">中文(台灣)</div>
-        <ul>
-          <li><a href="#">連絡 Microsoft</a></li>
-          <li><a href="#">隱私權</a></li>
-          <li><a href="#">使用規定</a></li>
-          <li><a href="#">商標</a></li>
-          <li><a href="#">有關我們的廣告訊息</a></li>
-          <li>© Microsoft 2022</li>
-        </ul>
-      </div>
     </div>
-  </div>
+    <div class="contact">
+      <div class="language"><i class="fa-solid fa-earth-asia"></i><a href="#"></i> 中文(台灣)</a></div>
+      <ul class="about">
+        <li><a href="#">連絡 Microsoft</a></li>
+        <li><a href="#">隱私權</a></li>
+        <li><a href="#">使用規定</a></li>
+        <li><a href="#">商標</a></li>
+        <li><a href="#">有關我們的廣告訊息</a></li>
+        <li class="copyright">© Microsoft 2022</li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
