--- a/index.html
+++ b/index.html
@@ -189,63 +189,75 @@
   </main>
   <footer class="footer">
     <div class="bottom-nav">
-      <ul class="bottom-nav-list">
-        <li class="bottom-nav-item">最新動向</li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
-        <li class="bottom-nav-item"><a href="#">Surface Go</a></li>
-        <li class="bottom-nav-item"><a href="#">Surface Book 2</a></li>
-        <li class="bottom-nav-item"><a href="#">Surface Pro</a></li>
-        <li class="bottom-nav-item"><a href="#">Windows 11 應用程式</a></li>
-      </ul>
-      <ul class="bottom-nav-list">
-        <li class="bottom-nav-item">Microsoft Store</li>
-        <li class="bottom-nav-item"><a href="#">帳戶設定檔</a></li>
-        <li class="bottom-nav-item"><a href="#">下載中心</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft Store 支援</a></li>
-        <li class="bottom-nav-item"><a href="#">退貨/退款</a></li>
-        <li class="bottom-nav-item"><a href="#">訂單追蹤</a></li>
-      </ul>
-      <ul class="bottom-nav-list">
-        <li class="bottom-nav-item">教育</li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 教育</a></li>
-        <li class="bottom-nav-item"><a href="#">教育裝置</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft Teams 教育版</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 365 教育版</a></li>
-        <li class="bottom-nav-item"><a href="#">Office 教育版</a></li>
-        <li class="bottom-nav-item"><a href="#">教育工作者訓練和發展</a></li>
-        <li class="bottom-nav-item"><a href="#">學生和家長優惠</a></li>
-        <li class="bottom-nav-item"><a href="#">Azure 學生版</a></li>
-      </ul>
-      <ul class="bottom-nav-list">
-        <li class="bottom-nav-item">商務</li>
-        <li class="bottom-nav-item"><a href="#">Microsoft Cloud</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 安全性</a></li>
-        <li class="bottom-nav-item"><a href="#">Azure</a></li>
-        <li class="bottom-nav-item"><a href="#">Dynamics 365</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft Advertising</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 產業</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft Teams</a></li>
-      </ul>
-      <ul class="bottom-nav-list">
-        <li class="bottom-nav-item">開發人員與 IT</li>
-        <li class="bottom-nav-item"><a href="#">開發人員中心</a></li>
-        <li class="bottom-nav-item"><a href="#">文件</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft Learn</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 技術社群</a></li>
-        <li class="bottom-nav-item"><a href="#">Azure Marketplace</a></li>
-        <li class="bottom-nav-item"><a href="#">AppSource</a></li>
-        <li class="bottom-nav-item"> <a href="#">Microsoft Power Platform</a></li>
-        <li class="bottom-nav-item"><a href="#">Visual Studio</a></li>
-      </ul>
-      <ul class="bottom-nav-list">
-        <li class="bottom-nav-item">公司</li>
-        <li class="bottom-nav-item"><a href="#">人才招募</a></li>
-        <li class="bottom-nav-item"><a href="#">公司新聞</a></li>
-        <li class="bottom-nav-item"><a href="#">Microsoft 隱私權</a></li>
-        <li class="bottom-nav-item"><a href="#">投資者</a></li>
-        <li class="bottom-nav-item"><a href="#">永續性</a></li>
-      </ul>
+      <div>
+        <h4>最新動向</h4>
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
+          <li class="bottom-nav-item"><a href="#">Surface Go</a></li>
+          <li class="bottom-nav-item"><a href="#">Surface Book 2</a></li>
+          <li class="bottom-nav-item"><a href="#">Surface Pro</a></li>
+          <li class="bottom-nav-item"><a href="#">Windows 11 應用程式</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Microsoft Store</h4>
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-item"><a href="#">帳戶設定檔</a></li>
+          <li class="bottom-nav-item"><a href="#">下載中心</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft Store 支援</a></li>
+          <li class="bottom-nav-item"><a href="#">退貨/退款</a></li>
+          <li class="bottom-nav-item"><a href="#">訂單追蹤</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>教育</h4>
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-item"><a href="#">Microsoft 教育</a></li>
+          <li class="bottom-nav-item"><a href="#">教育裝置</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft Teams 教育版</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft 365 教育版</a></li>
+          <li class="bottom-nav-item"><a href="#">Office 教育版</a></li>
+          <li class="bottom-nav-item"><a href="#">教育工作者訓練和發展</a></li>
+          <li class="bottom-nav-item"><a href="#">學生和家長優惠</a></li>
+          <li class="bottom-nav-item"><a href="#">Azure 學生版</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>商務</h4>
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-item"><a href="#">Microsoft Cloud</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft 安全性</a></li>
+          <li class="bottom-nav-item"><a href="#">Azure</a></li>
+          <li class="bottom-nav-item"><a href="#">Dynamics 365</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft Advertising</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft 產業</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft Teams</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>開發人員與 IT</h4>
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-item"><a href="#">開發人員中心</a></li>
+          <li class="bottom-nav-item"><a href="#">文件</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft Learn</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft 技術社群</a></li>
+          <li class="bottom-nav-item"><a href="#">Azure Marketplace</a></li>
+          <li class="bottom-nav-item"><a href="#">AppSource</a></li>
+          <li class="bottom-nav-item"> <a href="#">Microsoft Power Platform</a></li>
+          <li class="bottom-nav-item"><a href="#">Visual Studio</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>公司</h4>
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-item"><a href="#">人才招募</a></li>
+          <li class="bottom-nav-item"><a href="#">公司新聞</a></li>
+          <li class="bottom-nav-item"><a href="#">Microsoft 隱私權</a></li>
+          <li class="bottom-nav-item"><a href="#">投資者</a></li>
+          <li class="bottom-nav-item"><a href="#">永續性</a></li>
+        </ul>
+      </div>
     </div>
     <div class="contact">
       <div class="language"><i class="fa-solid fa-earth-asia"></i><a href="#"></i> 中文(台灣)</a></div>
