--- a/index.html
+++ b/index.html
@@ -24,14 +24,27 @@
         alt="Microsoft">
     </a>
     <ul class="nav-list">
-      <li class="nav-list-item border-1"><a href="#">Microsoft 365</a></li>
-      <li class="nav-list-item border-1"><a href="#">Office</a></li>
-      <li class="nav-list-item border-1"><a href="#">Windows</a></li>
-      <li class="nav-list-item border-1"><a href="#">Surface</a></li>
-      <li class="nav-list-item border-1"><a href="#">Xbox</a></li>
-      <li class="nav-list-item border-1"><a href="#">支援</a></li>
+      <li class="nav-item border-1"><a href="#">Microsoft 365</a></li>
+      <li class="nav-item border-1"><a href="#">Office</a></li>
+      <li class="nav-item border-1"><a href="#">Windows</a></li>
+      <li class="nav-item border-1"><a href="#">Surface</a></li>
+      <li class="nav-item border-1"><a href="#">Xbox</a></li>
+      <li class="nav-item border-1"><a href="#">支援</a></li>
     </ul>
-    <div class="nav-item border-1">
+
+    <ul class="icon-list">
+      <li class="nav-item border-1">
+        <a href="#">所有 Microsoft</a><i class='bx bx-chevron-down'></i></li>
+      <li class="nav-item border-1">
+        <a href="#" title="搜尋 Microsoft.com">搜尋</a><i class='bx bx-search bx-rotate-90'></i></li>
+      <li class="nav-item border-1">
+        <a href="#" title="0 個項目在購物車中">購物車</a><i class='bx bx-cart'></i>
+      </li>
+      <li class="user border-1">
+        <span>User</span><img src="https://i.pinimg.com/564x/4c/64/22/4c642224643e65500745ff827c670b29.jpg" alt="">
+      </li>
+    </ul>
+    <!-- <div class="nav-item border-1">
       <a href="#">所有 Microsoft</a><i class='bx bx-chevron-down'></i>
     </div>
     <div class="nav-item border-1">
@@ -42,7 +55,7 @@
     </div>
     <div class="user border-1">
       <span>User</span><img src="https://i.pinimg.com/564x/4c/64/22/4c642224643e65500745ff827c670b29.jpg" alt="">
-    </div>
+    </div> -->
   </nav>
   <main class="content">
     <div class="banner">
@@ -50,6 +63,7 @@
         src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4q2qk?ver=e900&q=90&m=6&h=1192&w=2120&b=%23FFFFFFFF&l=f&f=jpg&o=t&aim=true"
         alt="">
       <div class="banner-item">
+        <span class="tag">新上市</span>
         <h2>Microsoft 365</h2>
         <p>進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中</p>
         <button class="banner-btn banner-btn-dark">最多可供 6 人使用 <i class='bx bx-chevron-right'></i></button>
