--- a/index.html
+++ b/index.html
@@ -14,196 +14,205 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.2/css/boxicons.min.css'
     integrity='sha512-AGmpdsTqvAh2GvTWzVhhJ9VqQb1eAXwOM7uiWtv0DzcnGaGWy98K51z2cK5OG3gp4NB1HbMaD7p0MeO9kE7E3w=='
     crossorigin='anonymous' />
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'
+    integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=='
+    crossorigin='anonymous' />
 </head>
 
 <body>
   <nav class="nav">
-    <a class="logo border-1">
+    <a href="index.html" class="logo border-1">
       <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31"
         alt="Microsoft">
     </a>
     <ul class="nav-list">
-      <li class="nav-item border-1"><a href="#">Microsoft 365</a></li>
-      <li class="nav-item border-1"><a href="#">Office</a></li>
-      <li class="nav-item border-1"><a href="#">Windows</a></li>
-      <li class="nav-item border-1"><a href="#">Surface</a></li>
-      <li class="nav-item border-1"><a href="#">Xbox</a></li>
-      <li class="nav-item border-1"><a href="#">支援</a></li>
+      <li class="nav-item border-1"><a href="#"><span>Microsoft 365</span></a></li>
+      <li class="nav-item border-1"><a href="#"><span>Office</span></a></li>
+      <li class="nav-item border-1"><a href="#"><span>Windows</span></a></li>
+      <li class="nav-item border-1"><a href="#"><span>Surface</span></a></li>
+      <li class="nav-item border-1"><a href="#"><span>Xbox</span></a></li>
+      <li class="nav-item border-1"><a href="#"><span>支援</span></a></li>
     </ul>
 
     <ul class="icon-list">
       <li class="nav-item border-1">
-        <a href="#">所有 Microsoft</a><i class='bx bx-chevron-down'></i></li>
+        <a href="#"><span>所有 Microsoft</span> <i class='bx bx-chevron-down'></i></a>
+      </li>
       <li class="nav-item border-1">
-        <a href="#" title="搜尋 Microsoft.com">搜尋</a><i class='bx bx-search bx-rotate-90'></i></li>
+        <a href="#" title="搜尋 Microsoft.com"><span>搜尋</span> <i class='bx bx-search bx-rotate-90'></i></a>
+      </li>
       <li class="nav-item border-1">
-        <a href="#" title="0 個項目在購物車中">購物車</a><i class='bx bx-cart'></i>
+        <a href="#" title="0 個項目在購物車中"><span>購物車</span> <i class='bx bx-cart'></i></a>
       </li>
       <li class="user border-1">
         <span>User</span><img src="https://i.pinimg.com/564x/4c/64/22/4c642224643e65500745ff827c670b29.jpg" alt="">
       </li>
     </ul>
-    <!-- <div class="nav-item border-1">
-      <a href="#">所有 Microsoft</a><i class='bx bx-chevron-down'></i>
-    </div>
-    <div class="nav-item border-1">
-      <a href="#" title="搜尋 Microsoft.com">搜尋</a><i class='bx bx-search bx-rotate-90'></i>
-    </div>
-    <div class="nav-item border-1">
-      <a href="#" title="0 個項目在購物車中">購物車</a><i class='bx bx-cart'></i>
-    </div>
-    <div class="user border-1">
-      <span>User</span><img src="https://i.pinimg.com/564x/4c/64/22/4c642224643e65500745ff827c670b29.jpg" alt="">
-    </div> -->
   </nav>
-  <main class="content">
-    <div class="banner">
-      <img
-        src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4q2qk?ver=e900&q=90&m=6&h=1192&w=2120&b=%23FFFFFFFF&l=f&f=jpg&o=t&aim=true"
-        alt="">
-      <div class="banner-item">
-        <span class="tag">新上市</span>
-        <h2>Microsoft 365</h2>
-        <p>進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中</p>
-        <button class="banner-btn banner-btn-dark">最多可供 6 人使用 <i class='bx bx-chevron-right'></i></button>
-        <button class="banner-btn">適合 1 人使用 <i class='bx bx-chevron-right'></i></button>
+  <div class="banner">
+    <img
+      src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4q2qk?ver=e900&q=90&m=6&h=1192&w=2120&b=%23FFFFFFFF&l=f&f=jpg&o=t&aim=true"
+      alt="">
+    <div class="banner-item">
+      <span class="tag">新上市</span>
+      <h2>Microsoft 365</h2>
+      <p>進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中</p>
+      <div class="btn-block">
+        <a class="banner-btn banner-btn-dark"><span>最多可供 6 人使用</span> <i class='bx bx-chevron-right'></i></a>
+        <a class="banner-btn"><span>適合 1 人使用</span> <i class='bx bx-chevron-right'></i></a>
       </div>
     </div>
-    <div class="select-list">
+  </div>
+  <main>
+    <section class="content">
+      <div class="select-list">
         <ul>
           <li>
-            <a href="#"><img src="./images/windows.png" alt="選擇您的 Microsoft 365">選擇您的<br>Microsoft 365</a>
+            <a href="#">
+              <img src="./images/windows.png" alt="選擇您的 Microsoft 365">
+              <span><span>選擇您的</span>
+                <span>Microsoft 365</span></span>
+            </a>
           </li>
           <li>
-            <a href="#"><img src="./images//surface.webp" alt="選購 Surface 裝置">選購 Surface 裝置</a>
+            <a href="#">
+              <img src="./images//surface.webp" alt="選購 Surface 裝置">
+              <span>選購 Surface 裝置</span>
+            </a>
           </li>
           <li>
-            <a href="#"><img src="./images/windows.png" alt="取得 Windows 11">
-取得 Windows 11</a>
+            <a href="#">
+              <img src="./images/windows.png" alt="取得 Windows 11">
+              <span>取得 Windows 11</span>
+            </a>
           </li>
         </ul>
-    </div>
-    <div class="product-list">
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product1.webp" alt="">
+      </div>
+      <div class="product">
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product1.webp" alt="">
+          </div>
+          <a class="tag">新上市</a>
+          <div class="product-card-text">
+            <h3>專為今天和明天的生活而設計</h3>
+            <p>
+              新一代遊戲、 您的目標、 親朋好友。 Windows 11 是為了讓您更貼近所喜愛的一切。
+            </p>
+            <a href="#"><span>查看您的電腦是否準備就緒</span><i class='bx bx-chevron-right'></i></a>
+          </div>
         </div>
-        <a class="tag">新上市</a>
-        <div class="product-card-text">
-          <h3>專為今天和明天的生活而設計</h3>
-          <p>
-            新一代遊戲、 您的目標、 親朋好友。 Windows 11 是為了讓您更貼近所喜愛的一切。
-          </p>
-          <span><a href="#">查看您的電腦是否準備就緒</a><i class='bx bx-chevron-right'></i></span>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product2.webp" alt="">
+          </div>
+          <div class="product-card-text no-tag">
+            <h3>Surface Laptop Go</h3>
+            <p>
+              運用時尚和效能兼具、最輕巧的 Surface 筆記型電腦，善加利用每一天。
+            </p>
+            <a href="#"><span>立即選購</span><i class='bx bx-chevron-right'></i></a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product3.webp" alt="">
+          </div>
+          <a class="tag">查看更新的內容</a>
+          <div class="product-card-text">
+            <h3>Surface Pro X</h3>
+            <p>
+              隨時隨地以任何角度不間斷工作，而且配備了可拆式鍵盤與內建的 Slim Pen 存放空間和充電功能。 現在搭載 Windows 11。
+            </p>
+            <a href="#"><span>立即選購</span><i class='bx bx-chevron-right'></i></a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product4.jpg" alt="">
+          </div>
+          <div class="product-card-text no-tag">
+            <h3>PC Game Pass</h3>
+            <p>
+              解鎖 100 多款精彩遊戲和 EA Play，而且首月只需 NT$30。 此優惠僅適用於新訂閱者。
+            </p>
+            <a href="#"><span>立即加入</span><i class='bx bx-chevron-right'></i></a>
+          </div>
         </div>
       </div>
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product2.webp" alt="">
-        </div>
-        <div class="product-card-text no-tag">
-          <h3>Surface Laptop Go</h3>
-          <p>
-            運用時尚和效能兼具、最輕巧的 Surface 筆記型電腦，善加利用每一天。
-          </p>
-          <span><a href="#">立即選購</a><i class='bx bx-chevron-right'></i></span>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product3.webp" alt="">
-        </div>
-        <a class="tag">查看更新的內容</a>
-        <div class="product-card-text">
-          <h3>Surface Pro X</h3>
-          <p>
-            隨時隨地以任何角度不間斷工作，而且配備了可拆式鍵盤與內建的 Slim Pen 存放空間和充電功能。 現在搭載 Windows 11。
-          </p>
-          <span><a href="#">立即選購</a><i class='bx bx-chevron-right'></i></span>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product4.jpg" alt="">
-        </div>
-        <div class="product-card-text no-tag">
-          <h3>PC Game Pass</h3>
-          <p>
-            解鎖 100 多款精彩遊戲和 EA Play，而且首月只需 NT$30。 此優惠僅適用於新訂閱者。
-          </p>
-          <span><a href="#">立即加入</a><i class='bx bx-chevron-right'></i></span>
-        </div>
-      </div>
-    </div>
+    </section>
     <div class="banner">
-      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE3hFDE?ver=e113&q=0&m=8&h=472&w=1259&b=%23FFFFFFFF&l=f&x=0&y=187&s=2120&d=795&aim=true" alt="">
+      <img
+        src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE3hFDE?ver=e113&q=0&m=8&h=472&w=1259&b=%23FFFFFFFF&l=f&x=0&y=187&s=2120&d=795&aim=true"
+        alt="">
       <div class="banner-item">
         <h2>Microsoft OneDrive</h2>
         <p>將檔案和相片儲存到 OneDrive，即可隨時隨地從任何裝置存取</p>
-        <button class="banner-btn banner-btn-dark">深入了解 <i class='bx bx-chevron-right'></i></button>
+        <a class="banner-btn banner-btn-dark"><span>深入了解</span> <i class='bx bx-chevron-right'></i></a>
       </div>
     </div>
-    <h2 class="product-title">適用於商務</h2>
-    <div class="product-list">
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product5.webp" alt="">
+    <section class="content">
+      <h2 class="product-title">適用於商務</h2>
+      <div class="product">
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product5.webp" alt="">
+          </div>
+          <div class="product-card-text  no-tag">
+            <h3>適用於商務的 Surface</h3>
+            <p>
+              無論從事哪種工作，都有一款有助於成功的 Surface。
+            </p>
+            <a href="#"><span>立即選購</span><i class='bx bx-chevron-right'></i></a>
+          </div>
         </div>
-        <div class="product-card-text  no-tag">
-          <h3>適用於商務的 Surface</h3>
-          <p>
-            無論從事哪種工作，都有一款有助於成功的 Surface。
-          </p>
-          <span><a href="#">立即選購</a><i class='bx bx-chevron-right'></i></span>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product6.webp" alt="">
+          </div>
+          <div class="product-card-text no-tag">
+            <h3>免費取得 Microsoft Teams</h3>
+            <p>
+              線上會議、聊天和共用雲端儲存空間，盡在一處。
+            </p>
+            <a href="#"><span>免費註冊</span><i class='bx bx-chevron-right'></i></a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product7.webp" alt="">
+          </div>
+          <div class="product-card-text no-tag">
+            <h3>Microsoft 365 商務版</h3>
+            <p>
+              透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。
+            </p>
+            <a href="#"><span>立即選購</span><i class='bx bx-chevron-right'></i></a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./images/product8.webp" alt="">
+          </div>
+          <div class="product-card-text no-tag">
+            <h3>商務用 Windows 11 登場</h3>
+            <p>
+              專為混合式辦公而設計。 為員工帶來實用性。 為 IT 帶來一致性。 為所有人帶來安全性。
+            </p>
+            <a href="#"><span>深入了解</span><i class='bx bx-chevron-right'></i></a>
+          </div>
         </div>
       </div>
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product6.webp" alt="">
-        </div>
-        <div class="product-card-text no-tag">
-          <h3>免費取得 Microsoft Teams</h3>
-          <p>
-            線上會議、聊天和共用雲端儲存空間，盡在一處。
-          </p>
-          <span><a href="#">免費註冊</a><i class='bx bx-chevron-right'></i></span>
-        </div>
+      <div class="follow">
+        <span>關注 Microsoft</span>
+        <img src="./images/Facebook.png" alt="" target="_blank" title="在 Facebook 上關注 Microsoft，在新索引標籤中開啟">
+        <img src="./images/Youtube.png" alt="" target="_blank" title="在 Youtube 上關注 Microsoft，在新索引標籤中開啟">
       </div>
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product7.webp" alt="">
-        </div>
-        <div class="product-card-text no-tag">
-          <h3>Microsoft 365 商務版</h3>
-          <p>
-            透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。
-          </p>
-          <span><a href="#">立即選購</a><i class='bx bx-chevron-right'></i></span>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image">
-          <img src="./images/product8.webp" alt="">
-        </div>
-        <div class="product-card-text no-tag">
-          <h3>商務用 Windows 11 登場</h3>
-          <p>
-            專為混合式辦公而設計。 為員工帶來實用性。 為 IT 帶來一致性。 為所有人帶來安全性。
-          </p>
-          <span><a href="#">深入了解</a><i class='bx bx-chevron-right'></i></span>
-        </div>
-      </div>
-    </div>
-    <div class="follow">
-      <span>關注 Microsoft</span>
-      <img src="./images/Facebook.png" alt="" target="_blank" title="在 Facebook 上關注 Microsoft，在新索引標籤中開啟">
-      <img src="./images/Youtube.png" alt="" target="_blank" title="在 Youtube 上關注 Microsoft，在新索引標籤中開啟">
-    </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="bottom-nav">
-      <div>
+      <div class="bottom-nav-block">
         <h4>最新動向</h4>
         <ul class="bottom-nav-list">
           <li class="bottom-nav-item"><a href="#">Microsoft 365</a></li>
@@ -213,7 +222,7 @@
           <li class="bottom-nav-item"><a href="#">Windows 11 應用程式</a></li>
         </ul>
       </div>
-      <div>
+      <div class="bottom-nav-block">
         <h4>Microsoft Store</h4>
         <ul class="bottom-nav-list">
           <li class="bottom-nav-item"><a href="#">帳戶設定檔</a></li>
@@ -223,7 +232,7 @@
           <li class="bottom-nav-item"><a href="#">訂單追蹤</a></li>
         </ul>
       </div>
-      <div>
+      <div class="bottom-nav-block">
         <h4>教育</h4>
         <ul class="bottom-nav-list">
           <li class="bottom-nav-item"><a href="#">Microsoft 教育</a></li>
@@ -236,7 +245,7 @@
           <li class="bottom-nav-item"><a href="#">Azure 學生版</a></li>
         </ul>
       </div>
-      <div>
+      <div class="bottom-nav-block">
         <h4>商務</h4>
         <ul class="bottom-nav-list">
           <li class="bottom-nav-item"><a href="#">Microsoft Cloud</a></li>
@@ -249,7 +258,7 @@
           <li class="bottom-nav-item"><a href="#">Microsoft Teams</a></li>
         </ul>
       </div>
-      <div>
+      <div class="bottom-nav-block">
         <h4>開發人員與 IT</h4>
         <ul class="bottom-nav-list">
           <li class="bottom-nav-item"><a href="#">開發人員中心</a></li>
@@ -262,7 +271,7 @@
           <li class="bottom-nav-item"><a href="#">Visual Studio</a></li>
         </ul>
       </div>
-      <div>
+      <div class="bottom-nav-block">
         <h4>公司</h4>
         <ul class="bottom-nav-list">
           <li class="bottom-nav-item"><a href="#">人才招募</a></li>
@@ -274,7 +283,7 @@
       </div>
     </div>
     <div class="contact">
-      <div class="language"><i class="fa-solid fa-earth-asia"></i><a href="#"></i> 中文(台灣)</a></div>
+      <div class="language"><i class="fa-solid fa-earth-asia"></i><a href="#">中文(台灣)</a></div>
       <ul class="about">
         <li><a href="#">連絡 Microsoft</a></li>
         <li><a href="#">隱私權</a></li>
