--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 </head>
 
 <body>
-  <input type="checkbox" id="hamburger-menu" class="menu-controller">
   <nav class="nav">
     <a href="index.html" class="logo">
       <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31"
         alt="Microsoft">
     </a>
+    <input type="checkbox" id="hamburger-menu" class="menu-controller">
     <label for="hamburger-menu" class="hamburger-menu"><i class='bx bx-menu'></i></label>
     <ul class="nav-list">
       <li class="nav-item"><a href="#"><span>Microsoft 365</span></a></li>
@@ -34,20 +34,35 @@
       <li class="nav-item lg-item"><a href="#"><span>Surface</span></a></li>
       <li class="nav-item lgp-item"><a href="#"><span>Xbox</span></a></li>
       <li class="nav-item lgp-item"><a href="#"><span>支援</span></a></li>
-      <li class="nav-item more"><a href="#"><span>更多</span>  <i class='bx bx-chevron-down'></i></a></li>
+      <li class="nav-item more"><a href="#"><span>更多</span> <i class='bx bx-chevron-down'></i></a></li>
+    </ul>
+    <ul class="hamburger-menu-list" id="hamburger-menu-list">
+      <li><a href="#"><span>Microsoft 365</span></a></li>
+      <li><a href="#"><span>Office</span></a></li>
+      <li><a href="#"><span>Windows</span></a></li>
+      <li><a href="#"><span>Surface</span></a></li>
+      <li><a href="#"><span>Xbox</span></a></li>
+      <li><a href="#"><span>支援</span></a></li>
+      <li><a href="#"><span>軟體</span></a></li>
+      <li><a href="#"><span>個人電腦和設備</span></a></li>
+      <li><a href="#"><span>娛樂</span></a></li>
+      <li><a href="#"><span>商務適用</span></a></li>
+      <li><a href="#"><span>開發人員與 IT</span></a></li>
+      <li><a href="#"><span>其他</span></a></li>
+      <li><a href="#"><span>檢視網站地圖</span></a></li>
     </ul>
 
     <ul class="icon-list">
       <li class="nav-item sub-menu">
         <a href="#"><span>所有 Microsoft</span> <i class='bx bx-chevron-down'></i></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item search-btn">
         <a href="#" title="搜尋 Microsoft.com"><span>搜尋</span> <i class='bx bx-search bx-rotate-90'></i></a>
       </li>
       <li class="nav-item">
         <a href="#" title="0 個項目在購物車中"><span>購物車</span> <i class='bx bx-cart'></i></a>
       </li>
-      <li class="user ">
+      <li class="user">
         <span>User</span><img src="https://i.pinimg.com/564x/4c/64/22/4c642224643e65500745ff827c670b29.jpg" alt="">
       </li>
     </ul>
@@ -299,4 +314,5 @@
   </footer>
 </body>
 
+<script src="./js/all.js"></script>
 </html>
